test/runnable/thread-local.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	trusted
		results nat[] <- for x : 0 .. 100 parallel
			*foo := x
			*foo +:= 1
			*foo,
		results is for x : 1 .. 101; x
		out print "{results[99]}"
		()

foo nat64 mut*() thread-local
